Did most Hm styling, added to json, & added imgs.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -361,6 +361,8 @@ body {
     'Segoe UI Symbol';
   font-size: 16px;
   color: #1a1a1a;
+  background-image:url("./images/fur.avif");
+  background-size: cover;
 }
 
 h1,
