--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -1,11 +1,10 @@
-
-
 .logo {
-  
+  width: 100px;
 }
 
 .name {
   color: #FAF8FA;
+  text-decoration: none;
 }
 
 .nav {
@@ -36,14 +35,23 @@
   background: #5E239D
 }
 
-img {
-  min-width: 150%;
+.manyDogs {
+  width: 100%;
 }
+
 span {
   font-weight: bold;
   font-size: 20px;
+  letter-spacing: 2px;
   padding-top: 20px;
   padding-bottom: 7px;
+}
+
+.link {
+  color: #FAF8FA!important;
+  font-size: 30px;
+  text-decoration: none;
+  letter-spacing: 2px;
 }
 
 .fab, .fas {
