--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -1,10 +1,27 @@
-.logo {
-  width: 100px;
-}
-
-.name {
+h1, .name {
   color: #FAF8FA;
   text-decoration: none;
+  font-size: 55px;
+}
+
+span {
+  font-weight: bold;
+  font-size: 20px;
+  letter-spacing: 2px;
+  padding-top: 20px;
+  padding-bottom: 7px;
+}
+
+li {
+  padding:5px;
+}
+
+p {
+  color: #5E239D!important;
+}
+.logo {
+  width: 100px;
+  font-size: 30;
 }
 
 .nav {
@@ -32,33 +49,79 @@
 }
 
 .login {
-  background: #5E239D
+  background: #5E239D;
+
 }
 
 .manyDogs {
   width: 100%;
 }
 
-span {
-  font-weight: bold;
-  font-size: 20px;
-  letter-spacing: 2px;
-  padding-top: 20px;
-  padding-bottom: 7px;
+.videos {
+  text-decoration: none!important;
+  color: #5E239D!important;
+}
+
+.videos:hover {
+  text-decoration: none!important;
+  background-color: #FAF8FA!important;
+  color: #5E239D!important;
+  border-radius: 15px;
+  padding:7px;
+}
+
+.vContainer {
+  background-color: #FBB94C!important;
+  color: #5E239D!important;
+}
+
+.link:hover {
+  background-color: #FAF8FA!important;
+  color: #5E239D!important;
+  border: none;
+  border-radius: 15px;
+  padding: 7px;
 }
 
 .link {
   color: #FAF8FA!important;
-  font-size: 30px;
+  font-size: 20px;
   text-decoration: none;
   letter-spacing: 2px;
 }
+
+.link:hover {
+  background-color: #FAF8FA!important;
+  color: #5E239D!important;
+  border: none;
+  border-radius: 15px;
+  padding: 7px;
+}
+
+.link:active {
+  color: #5E239D!important;
+  padding:7px;
+  background-color: #FAF8FA!important;
+  border: none;
+  border-radius: 15px;}
 
 .fab, .fas {
   justify-content: space-between!important;
   color: black;
   margin: 10px;
   font-size: 30px;
+}
+
+.vTitles {
+  background-color: #5E239D!important;
+  color: #FAF8FA!important;
+  border-radius: 5px;
+  padding:5px;
+}
+.vText {
+  background-color: #5E239D!important;
+  color: #FAF8FA!important;
+  border-radius: 5px;
 }
 
 
