Successfully debugged & completed styling vid pg.

--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -1,4 +1,5 @@
-h1, .name {
+h1,
+.name {
   color: #FAF8FA;
   text-decoration: none;
   font-size: 55px;
@@ -13,37 +14,40 @@ span {
 }
 
 li {
-  padding:5px;
+  padding: 5px;
 }
 
 p {
-  color: #5E239D!important;
+  color: #5E239D !important;
 }
+
 .logo {
   width: 100px;
   font-size: 30;
 }
 
 .nav {
-  background-color: #5E239D!important;
+  background-color: #5E239D !important;
 }
 
 .btn {
   padding: 15px 25px;
   text-align: center;
   cursor: pointer;
-  outline: none!important;
-  color: #5E239D!important;
-  background-color: #FAF8FA!important;
+  outline: none !important;
+  color: #5E239D !important;
+  background-color: #FAF8FA !important;
   border: none;
   border-radius: 15px;
   box-shadow: 0 9px #999;
 }
 
-.btn:hover {background-color: #FBB94C!important}
+.btn:hover {
+  background-color: #FBB94C !important
+}
 
 .btn:active {
-  background-color: #FBB94C!important;
+  background-color: #FBB94C !important;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
@@ -58,70 +62,71 @@ p {
 }
 
 .videos {
-  text-decoration: none!important;
-  color: #5E239D!important;
+  text-decoration: none !important;
+  color: #5E239D !important;
 }
 
 .videos:hover {
-  text-decoration: none!important;
-  background-color: #FAF8FA!important;
-  color: #5E239D!important;
+  text-decoration: none !important;
+  background-color: #FAF8FA !important;
+  color: #5E239D !important;
   border-radius: 15px;
-  padding:7px;
+  padding: 7px;
 }
 
 .vContainer {
-  background-color: #FBB94C!important;
-  color: #5E239D!important;
+  background-color: #FBB94C !important;
+  color: #5E239D !important;
 }
 
 .link:hover {
-  background-color: #FAF8FA!important;
-  color: #5E239D!important;
+  background-color: #FAF8FA !important;
+  color: #5E239D !important;
   border: none;
   border-radius: 15px;
   padding: 7px;
 }
 
 .link {
-  color: #FAF8FA!important;
+  color: #FAF8FA !important;
   font-size: 20px;
   text-decoration: none;
   letter-spacing: 2px;
 }
 
 .link:hover {
-  background-color: #FAF8FA!important;
-  color: #5E239D!important;
+  background-color: #FAF8FA !important;
+  color: #5E239D !important;
   border: none;
   border-radius: 15px;
   padding: 7px;
 }
 
 .link:active {
-  color: #5E239D!important;
-  padding:7px;
-  background-color: #FAF8FA!important;
+  color: #5E239D !important;
+  padding: 7px;
+  background-color: #FAF8FA !important;
   border: none;
-  border-radius: 15px;}
+  border-radius: 15px;
+}
 
-.fab, .fas {
-  justify-content: space-between!important;
+.fab,
+.fas {
+  justify-content: space-between !important;
   color: black;
   margin: 10px;
   font-size: 30px;
 }
 
 .vTitles {
-  background-color: #5E239D!important;
-  color: #FAF8FA!important;
+  background-color: #5E239D !important;
+  color: #FAF8FA !important;
   border-radius: 5px;
-  padding:6px;
+  padding: 6px;
 }
+
 .vText {
-  background-color: #5E239D!important;
-  color: #FAF8FA!important;
+  background-color: #5E239D !important;
+  color: #FAF8FA !important;
   border-radius: 5px;
 }
-
-
