updated quiz.css removing the form style.  This put the buttons on the same line and added padding.  Also modified a package.json file that still had an old name

--- a/client/src/assets/quiz.css
+++ b/client/src/assets/quiz.css
@@ -13,10 +13,10 @@ h1 {
     font-size: 24px;
 }
 
-form {
+/* form {
     display: flex;
     flex-direction: column;
-}
+} */
 
 label {
     display: inline-block;
@@ -41,7 +41,17 @@ select {
     text-overflow: ellipsis;
 }
 
-button.submit-button,
+button.submit-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 150px;
+}
+
 button.try-again-button {
     padding: 10px 20px;
     background-color: #007bff;
@@ -78,11 +88,13 @@ p {
 
 .next-button,
 .prev-button {
+
     background-color: #007bff;
     color: #fff;
     border: none;
     padding: 10px 20px;
     margin-right: 10px;
+    margin-top: 10px;
     cursor: pointer;
     font-size: 16px;
     border-radius: 5px;
